It does something!

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,24 +1,21 @@
 ext {
     vers = [
-            'carbon'            : '1.0',
-
             'checkstyle'        : '8.34',
             'stylecheck'        : '0.1-SNAPSHOT',
             'checker-qual'      : '3.8.0',
-            'guava'             : '26.0-jre',
+            'gson'              : '2.8.6',
             'slf4j-api'         : '1.7.25',
             'slf4j-jdk14'       : '1.7.28',
-            'adventure'         : '4.3.0',
-            'adventure-platform': '4.0.0-SNAPSHOT',
+            'adventure'         : '4.4.0',
             'minimessage'       : '4.1.0-SNAPSHOT',
-            'kyori-event-api'   : '3.0.0',
+            'kyori-event-api'   : '4.0.0-SNAPSHOT',
             'kyori-registry'    : '1.0.0-SNAPSHOT',
-            'cloud'             : '1.2.0',
+            'cloud'             : '1.4.0',
             'configurate'       : '4.0.0',
-            'luckperms-api'     : '5.1',
+            'lettuce'           : '6.0.2.RELEASE',
 
             // Bukkit
-            'paper-api'         : '1.16.4-R0.1-SNAPSHOT',
+            'paper-api'         : '1.16.5-R0.1-SNAPSHOT',
             'snakeyaml'         : '1.27',
             'placeholder-api'   : '2.10.9',
             'vault'             : '1.7',
