--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ subprojects {
 
     dependencies {
         checkstyle("ca.stellardrift:stylecheck:${vers['stylecheck']}")
+        compileOnlyApi "org.slf4j:slf4j-api:${vers['slf4j-api']}"
     }
 
     checkstyle {
